--- a/package.json
+++ b/package.json
@@ -15,9 +15,12 @@
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
     "husky": "^0.14.3",
+    "path-to-regexp": "^2.0.0",
     "prop-types": "^15.5.10",
     "react": "^15.6.1",
     "react-dom": "^15.6.1",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
     "webpack": "^3.5.5",
     "webpack-dev-server": "^2.7.1"
   },
